Add demo combining StructuredTaskScope and ScopeValue